samples/_failures_safe/1761285284_602275_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dad3220.c: In function ‘main’:
./samples/SAFE/__tmp_0dad3220.c:149:20: error: missing terminating " character
  149 |             printf("[%s] %-8s: %s\n
      |                    ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0dad3220.c:149:13: error: expected expression at end of input
  149 |             printf("[%s] %-8s: %s\n
      |             ^~~~~~
./samples/SAFE/__tmp_0dad3220.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dad3220.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dad3220.c:149:13: error: expected declaration or statement at end of input
